feat: created read all transactions endpoint
